changes to port

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -43,7 +43,7 @@ body {
 }
 
 aside {
-  background-image: linear-gradient(#f4abaa,#e56b1f);
+  background-image: linear-gradient(#f4abaa,#fe9e62);
 }
 
 .background-image2 {
